bug #23777 (r=valeski).  Reworked the parsing of the HTTP server version to avoid a floating-point rounding error which caused the server version to be incorrect...